--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,7 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+.relative space-y-6 p-6 {
+  padding:0px;
+  margin: 0px;
+}
