Fix JSX, CSS, and import syntax errors

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,6 @@
   background-clip: text;
 }
 
-
 /* Animation utilities */
 @keyframes slide-in-from-top-2 {
   from {
@@ -120,12 +119,11 @@
 
 .fade-out {
   animation: fade-out 300ms ease-in-out forwards;
+}
 
-.relative space-y-6 p-6 {
-  padding:0px;
+.relative.space-y-6.p-6 {
+  padding: 0px;
   margin: 0px;
   height: 45px;
-  border:0px;
-
-
+  border: 0px;
 }
